--- a/index.html
+++ b/index.html
@@ -1,1 +1,78 @@
-Hello World
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Romana Tech</title>
+    <link rel="stylesheet" href="styles/main.css">
+</head>
+<body>
+    <header>
+        <h1>Equipos tecnologicos</h1>
+        <nav>
+            <ul>
+                <li><a href="#incio">Inicio</a></li>
+                <li><a href="#productos">Productos</a></li>
+                <li><a href="#contacto">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section id="inicio">
+            <h2>Se bievenido a Romana Tech</h2>
+            <p>Donde podras encontrar los mejores equipos a precios asequibles</p>
+        </section>
+
+        <section id="productos">
+            <h2>Nuestros productos</h2>
+            <div class="product-grid">
+                <div class="product-card">
+                    <img src="images/" alt="">
+                    <h3>Nombre del producto</h3>
+                    <p>Descripcion del producto</p>
+                    <button>Ver mas</button>
+                </div>
+                <div class="product-card"></div>
+                    <img src="images/" alt="">
+                    <h3>Nombre del producto</h3>
+                    <p>Descripcion del producto</p>
+                    <button>Ver mas</button>
+                </div>
+                <div class="product-card"></div>
+                    <img src="images/" alt="">
+                    <h3>Nombre del producto</h3>
+                    <p>Descripcion del producto</p>
+                    <button>Ver mas</button>
+                </div>
+                <div class="product-card"></div>
+                    <img src="images/" alt="">
+                    <h3>Nombre del producto</h3>
+                    <p>Descripcion del producto</p>
+                    <button>Ver mas</button>
+                </div>
+            </div>
+        </section>
+
+        <section id="contacto">
+            <h2>Contactos</h2>
+            <form>
+                <label for="nombre">Nombre:</label>
+                <input type="text" id="nombre" name="nombre" required>
+
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="mensaje">Mensaje:</label>
+                <textarea id="mensaje" name="mensaje" required></textarea>
+
+                <button type="submit">Enviar</button>
+            </form>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; Romana Tech. Todos los derechos reservados</p>
+    </footer>
+</body>
+</html>
