feat: :sparkles: Initial Commit

--- a/index.html
+++ b/index.html
@@ -27,24 +27,28 @@
         <section id="productos">
             <h2>Nuestros productos</h2>
             <div class="product-grid">
+
                 <div class="product-card">
-                    <img src="images/" alt="">
-                    <h3>Nombre del producto</h3>
-                    <p>Descripcion del producto</p>
+                    <img src="images/laptop1.jpg" alt="laptop">
+                    <h3>Laptop HP</h3>
+                    <p>Equipo practico para  estudiar y trabajar</p>
                     <button>Ver mas</button>
                 </div>
+
                 <div class="product-card"></div>
-                    <img src="images/" alt="">
-                    <h3>Nombre del producto</h3>
-                    <p>Descripcion del producto</p>
+                    <img src="images/ipad1.jpg" alt="ipad">
+                    <h3>Ipad Pro</h3>
+                    <p>Equipo perfecto para estudios</p>
                     <button>Ver mas</button>
                 </div>
+
                 <div class="product-card"></div>
-                    <img src="images/" alt="">
-                    <h3>Nombre del producto</h3>
-                    <p>Descripcion del producto</p>
+                    <img src="images/samsung1.jpg" alt="samsung">
+                    <h3>Samsung A54</h3>
+                    <p>El telefono que tanto estabas buscando</p>
                     <button>Ver mas</button>
                 </div>
+
                 <div class="product-card"></div>
                     <img src="images/" alt="">
                     <h3>Nombre del producto</h3>
